2011-04-04 Kazuhiko
* configure searchable text property ids and method ids for Bug.

2010-10-19 Kazuhiko
* When checking duplicated selection names, we should use get_recursive_orig_value('selection_name') instead of getRecursiveTemplateField().get_value('selection_name'), because delegation for selection_name can end at any intermediate proxy field. And skip an empty selection name that is now valid for a listbox where we don't want to store a selection.

2010-10-19 yo
* When checking duplicated selection names, skip field libraries, as they don't matter.

2010-10-11 lucas
* Now portal_type_group_list is an optional param for the script BaseType_copyRoleList.

2010-03-02 yusei
* Remove short title.

2010-02-24 yusei
* Move Software Release and Software Publication to erp5_forge_release to remove dependencies to crm and dms.

2010-02 jps
* added Software Release portal type
* added Software Publication portal type
* removed upload module
* added optional dependency to DMS (Software Release) and CRM (Software Publication)

2010-02-18 tatuya
* Fix a issue that Bug document can not cancel the bug, because it can not add a content when cancelled state and the transition try to create an event.

2009-11-18 yusei
* Fix wrong python script parameter.

2009-10-16 yusei
* Update for the changes of new portal types of portal types.

2009-09-11 Kazuhiko
* use existing 'language' property instead of 'language' category for Glossary Terms.
* to migrate existing Glossary Terms, please use GlossaryTerm_migrateLanguageProperty script.

2009-08-05 tatuya
* Fix 'Generate POT File' function when there is a PageTemplate which is using nested i18n block and using tal:repeat in the block

2009-06-30 romain
* Revert latest proxy field library simplification, as the design was not finalized.

2009-05-18 yusei
* Fix some proxy fields. count_method should not be inherited from template field.

2009-05-15 yusei