@@ -1,3 +1,6 @@
+2011-04-14 yusei
+* Remove old unnecessary tales expression from relation string field.
+
 2011-04-04 Kazuhiko
 * configure searchable text property ids and method ids for Bug.
 
